# mempal

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  README_zh.md  justfile  lefthook.yml
.claude/: settings.json
crates/mempal-ingest/: Cargo.toml
crates/mempal-ingest/src/: lib.rs  normalize.rs
crates/mempal-ingest/tests/: ingest_test.rs  pipeline_test.rs
docs/: MIND-MODEL-DESIGN.md  usage.md
scripts/: install-from-source.sh
specs/: p0-core-scaffold.spec.md  p0-embed-trait.spec.md  p0-ingest.spec.md  p0-search-cli.spec.md  p1-routing-citation.spec.md  p10-cli-dashboard.spec.md  p10-explicit-tunnels.spec.md  p10-folder-claudemd-hotpatch.spec.md  p10-normalize-version.spec.md  p10-project-vector-isolation.spec.md  p11-chunk-neighbors.spec.md  p11-diary-daily-rollup.spec.md  p11-transcript-noise-strip.spec.md  p12-mind-model-bootstrap.spec.md  p13-ingest-identity.spec.md  p13-wake-up-statement.spec.md  p14-context-assembler.spec.md  p15-mcp-context.spec.md  p16-context-skill-guidance.spec.md  p17-knowledge-lifecycle.spec.md  p18-knowledge-distill.spec.md  p19-lifecycle-ref-validation.spec.md  p2-mcp.spec.md  p20-promotion-gate-policy.spec.md  p21-mcp-knowledge-gate.spec.md  p22-mcp-knowledge-distill.spec.md  p23-mcp-knowledge-lifecycle.spec.md  p24-anchor-publication.spec.md  p25-mcp-anchor-publication.spec.md  p26-dao-tian-runtime-budget.spec.md  p27-knowledge-policy-surface.spec.md  p28-field-taxonomy-surface.spec.md  p29-wake-up-context-boundary.spec.md  p3-aaak.spec.md  p30-knowledge-card-storage-boundary.spec.md  p4-rest-api.spec.md  (+13 more)
(+225 files in other folders)
